# newsletter-dashboard

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
src/core/: settings.py  urls.py  wsgi.py
